<resources>
    <string name="app_name">My Salon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_schedule">ScheduleActivity</string>
    <string name="service_name">Service: %s</string>
    <string name="service_time_attendance">Time Attendance: %s</string>
    <string name="service_value">Value: %s</string>
    <string name="service_description">Description: %s</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="background">Background</string>
    <string name="enter">Enter</string>
    <string name="login">Login</string>
    <string name="login_with_google">Login With Google</string>
    <string name="new_youser_info">If you are a new youser click here</string>
    <string name="agenda">Agenda</string>
    <string name="Scheduling">Scheduling</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
</resources>